--- a/src/app/Profile/profilepage/profilepage.component.css
+++ b/src/app/Profile/profilepage/profilepage.component.css
@@ -34,7 +34,7 @@
     font-size: 14px;
 }
 .editandviewmobile{
-    margin-right: 16px;
+    margin-right: 22px;
     background-color: #e4e4e4;
     border-radius: 7px;
     cursor: pointer;
@@ -217,8 +217,8 @@
     /* height: 102%; */
     height:17vh;
     border-radius: 1px;
-    box-shadow: 0px 0px 3px #a9a9a9;
-    width: 118%;
+    box-shadow: 0px 0px 2px #919191;
+    width: 123%;
 }
 
 .profilepicinpost{
@@ -342,4 +342,32 @@ figure:hover figcaption{
 
 .commentinput:focus{
     outline: none;
+}
+
+
+.containerposts {
+    margin: 0 auto;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    align-items: center;
+    align-content: space-around;
+
+    height: 93vmin;
+    width: 93vmin;
+    background: lightgrey;
+}
+.cell {
+    height: 30vmin;
+    width: 30vmin;
+    background-color:#1E1E1E;
+}
+
+.parentdiv{
+  display: flex;
+}
+
+.childdiv{
+  flex: 1;
 }
