--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -85,7 +85,7 @@
     
 }
 .postmobile{
-    width: 292%;
+    width: 104%;
 }
 .likesandcomment{
     height: 100px;
@@ -242,5 +242,9 @@
     width: 217%;
     margin-left: 5%;
     margin-bottom:36px 
+}
+
+.navbar-brand{
+    cursor: pointer;
 }
 
